# SpiceAi_Assessment

./: Cargo.toml  lib.rs  main.rs  spicepod.yaml
