[package]
name = "spiceai"
version = "2.0.0"
edition = "2021"
description = "SDK for Spice.ai, an open-source runtime and platform for building AI-driven software."
license = "Apache-2.0"

[dependencies]
arrow-flight = { version = "51.0.0", features = ["flight-sql-experimental"] }
bytes = "1.6.0"
prost = "0.12.4"
prost-types = "0.12.4"
rustls = "0.23.5"
tokio = "1.37.0"
rustls-native-certs = "0.6.3"
tonic = { version = "0.11.0", default-features = false, features = [
  "transport",
  "tls",
  "tls-roots",
] }
rustls-pemfile = "1.0.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
arrow = "51.0.0"
futures = "0.3.30"
base64 = "0.22.0"

[target.'cfg(windows)'.dependencies]
winver = "1.0.0"

[dev-dependencies]
regex = "1.10.6"
